syntax = "proto3";

import "wxRequest.proto";
import "google/api/annotations.proto";
//-import "google/api/*.proto";
import "google/api/httpbody.proto";
import "wxResponse.proto";

//option xx_package = 
/////
option go_package = "codeup.aliyun.com/vipex/go-web/api/vipex.cc/wx/v1";
///
//option xx_package = 

package v1;

service Wx {
			rpc Auth(WxRequest) returns (WxResponse) {
				option (google.api.http) = {
					get: "/v1/Auth"
				};
			}
					rpc UpContents(stream google.api.HttpBody) returns (WxResponse) {
						option (google.api.http) = {
							//
							post: "/v1/UpContents"
							/*-*/body: "*"
						};
					}
			rpc GetAvatarUrl(WxRequest) returns (WxResponse) {
				option (google.api.http) = {
					get: "/v1/GetAvatarUrl/{openid}"
				};
			}
			rpc GetBusinessInfo(WxRequest) returns (WxResponse) {
				option (google.api.http) = {
					get: "/v1/GetBusinessInfo/{openid}"
				};
			}
			rpc UpBusinessInfo(WxRequest) returns (WxResponse) {
				option (google.api.http) = {
					get: "/v1/UpBusinessInfo/{openid}/{businessid}"
				};
			}
			rpc GetDetails(WxRequest) returns (WxResponse) {
				option (google.api.http) = {
					get: "/v1/GetDetails/{openid}/{type}"
				};
			}
			rpc GetOrder(WxRequest) returns (WxResponse) {
				option (google.api.http) = {
					get: "/v1/GetOrder/{openid}"
				};
			}
					rpc GetCnts(WxRequest) returns (/*stream google.api.HttpBody*/ WxResponse) {
						option (google.api.http) = {
							//
							post: "/v1/GetCnts"
							//-body: "*"
						};
					}
			rpc GetRepair(WxRequest) returns (WxResponse) {
				option (google.api.http) = {
					get: "/v1/GetRepair/{openid}"
				};
			}
}

/*
	GET    /api/auth                 --> main.main.func1
POST   /api/upContents           --> main.main.func2
	GET    /api/getAvatarUrl/:openid --> main.main.func3
	GET    /api/getBusinessInfo/:openid --> main.main.func4
	GET    /api/upBusinessInfo/:openid/:businessid --> main.main.func5
	GET    /api/getDetails/:openid/:type --> main.main.func6
	GET    /api/getOrder/:openid     --> main.main.func7
POST   /api/getCnts              --> main.main.func8
	GET    /api/getRepair/:openid    --> main.main.func9
*/

///