syntax = "proto3";

//
import "google/api/annotations.proto";
///

option go_package = "codeup.aliyun.com/vipex/go-web/api/vipex.cc/wx/v2";

package v2;

		message WxRequest {
			string ping = 1;
		}

service Wx {
	rpc WxPing(WxRequest) returns (WxResponse) {
			option (google.api.http).get = "/v2/WxPing";
	}
}

message WxResponse {
  string reply = 1;
}